<resources>
    <string name="server">http://localhost:4242/api</string>
    <string name="app_name">EV-SC</string>
    <string name="add_station">add station</string>
    <string name="add_new_station">add new station</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="charging_stations">Charging Stations</string>
    <string name="average_grade">Average Grade</string>
    <string name="latitude">Latitude</string>
    <string name="longtitude">Longtitude</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ev_sc">EV-SC</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">LOGIN</string>
    <string name="new_user_register">new user? Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="favorites">Favorites:</string>
    <string name="reviews">Reviews:</string>
    <string name="my_reviews">My reviews:</string>
    <string name="edit_station">edit station</string>
    <string name="enter_location">Enter Location</string>
    <string name="rate">Rate:</string>
    <string name="edit_station_dropdown">Choose station to edit</string>
    <string name="enter_your_email_and_we_ll_send_you_a_link_to_reset_your_password">Enter your email and we\'ll send you a link to reset your password</string>
    <string name="back_to_login"><![CDATA[< Back to Login]]></string>
</resources>