<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/confirm_password_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="58dp">


        <TextView
            android:id="@+id/title_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.067" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toEndOf="@+id/line_first_name_register"
            app:layout_constraintTop_toBottomOf="@+id/title_register"
            app:layout_constraintVertical_bias="0.016"
            app:srcCompat="@drawable/ic_register_hero" />

        <EditText
            android:id="@+id/line_first_name_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/line_last_name_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintStart_toEndOf="@+id/imageView30"
            app:layout_constraintTop_toBottomOf="@+id/title_register"
            app:layout_constraintVertical_bias="0.817" />

        <EditText
            android:id="@+id/line_email_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/line_uasername_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintStart_toEndOf="@+id/imageView30"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.959"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/line_uasername_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/line_enter_password_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintStart_toEndOf="@+id/imageView30"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96" />

        <EditText
            android:id="@+id/line_enter_password_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/line_confirm_password_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintStart_toEndOf="@+id/imageView30"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.979" />

        <EditText
            android:id="@+id/line_confirm_password_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintStart_toEndOf="@+id/imageView30"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.672" />


        <EditText
            android:id="@+id/line_last_name_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/line_email_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintStart_toEndOf="@+id/imageView30"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.948" />


        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/rounded_button"
            android:text="@string/register"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.938"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.88" />

        <ImageView
            android:id="@+id/imageView30"
            android:layout_width="24dp"
            android:layout_height="344dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.036"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_side_bg" />

        <ImageView
            android:id="@+id/imageView33"
            android:layout_width="22dp"
            android:layout_height="190dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_side_bg" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>